Add links to xitrum-new's runner